# sky-kit

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
baby_robot/: __init__.py  memory.py  robot.py  skills.py
cli/: generator.py  main.py
cli/template/: .gitignore  cli.py  service.py  start.py
cli/template/core/: ai_client.py  bot.py  config.py  mcp_client.py  memory_manager.py  skill_manager.py
cli/template/skills/: base_skill.py  code_executor.py  file_manager.py  web_search.py
cli/template/web/: index.html
tests/: __init__.py  test_generator.py  test_main.py  test_memory.py  test_robot.py  test_skills.py
